RESOLVED FIXED80152
Web Inspector: assertion failure in JSMainThreadExecState::instrumentedCall
https://bugs.webkit.org/show_bug.cgi?id=80152
Summary Web Inspector: assertion failure in JSMainThreadExecState::instrumentedCall
Yury Semikhatsky
Reported 2012-03-02 05:27:01 PST
After http://trac.webkit.org/changeset/109540 we observe the following crash in debug mode: ASSERTION FAILED: isMainThread() ../../Source/WebCore/bindings/js/JSMainThreadExecState.h(92) : WebCore::JSMainThreadExecState::JSMainThreadExecState(JSC::ExecState*)
Attachments
Patch (6.08 KB, patch)
2012-03-02 05:35 PST, Yury Semikhatsky
pfeldman: review+
Yury Semikhatsky
Comment 1 2012-03-02 05:35:47 PST
Yury Semikhatsky
Comment 2 2012-03-02 05:49:20 PST
Note You need to log in before you can comment on or make changes to this bug.