Web Inspector: assertion failure in JSMainThreadExecState::instrumentedCall https://bugs.webkit.org/show_bug.cgi?id=80152

Extracted common code of JS call instrumentation into instrumentFunctionCall method
and call it directly where the instrumentation is needed instead of calling
JSMainThreadExecState::instrumentedCall which works on the main thread only.

Reviewed by Pavel Feldman.

* bindings/js/JSCallbackData.cpp:
(WebCore::JSCallbackData::invokeCallback):
* bindings/js/JSEventListener.cpp:
(WebCore::JSEventListener::handleEvent):
* bindings/js/JSMainThreadExecState.h:
(WebCore::JSMainThreadExecState::instrumentFunctionCall):

Canonical link: https://commits.webkit.org/97244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109568 268f45cc-cd09-0410-ab3c-d52691b4dbfc